# play_with_aws_sagemaker

./: .gitignore  README.md
.github/workflows/: deploy_serverless_inference.yml
docs/inference/: README.md  endpoint.md  endpoint_config.md  model.md
serverless_inference/: Dockerfile  deploy.py  invoke_serverless_inference.sh  pyproject.toml
serverless_inference/opt/program/: main.py
serverless_inference/src/: app.py  main.py
